--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
+<html>
     <head>
-        <meta charset="utf-8">
         {% if title %}
-        <title>{{ title }} - Blog</title>
+        <title>{{ title }} - microblog</title>
         {% else %}
-        <title>Welcome my Blog</title>
+        <title>microblog</title>
         {% endif %}
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
     </head>
     <body>
-        {% block content %} {% endblock %}
+        <div>
+            Microblog:
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Login</a>
+        </div>
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+        {% block content %}{% endblock %}
     </body>
 </html>
