--- a/todo/templates/valuta.html
+++ b/todo/templates/valuta.html
@@ -11,7 +11,7 @@ valute
                 <div class="card-header text-center">
                     <h3>Конвертер валют </h3>
                 </div>
-                <form id="form" class="p-3" action='' method="POST">
+                <form id="form" class="p-3" action='/valuta' method="POST">
                     <div class="form-row">
                         <div class="form-group col-md-4 mb-0">
                             <label for="amount">Сумма*</label>
