--- a/todo/templates/weather.html
+++ b/todo/templates/weather.html
@@ -8,7 +8,7 @@
             <div class='row'>
                 <div class='col-5 offset-1'>
                     <h1>Погода в вашем городе</h1>
-                    <form action="/" method='POST'>
+                    <form action="/weather" method='POST'>
                         <label for='city'>Город:</label>
                         <input type="text" name="city" placeholder='Введите город' class="form-control" value="{{ request.form['context'] }}"></input>
                         <input type="submit" name='send' value='Определить' class='mt-2 btn btn-danger '>
