--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -18,6 +18,7 @@
                 <a class="p-2 text-dark" href="{{ url_for('weather') }}">Погода</a>
                 <a class="p-2 text-dark" href="{{ url_for('valuta') }}">Валюта</a>
                 <a class="p-2 text-dark" href="{{ url_for('info') }}">Информация</a>
+                <a class="p-2 text-dark" href="{{ url_for('login') }}">Регистрация</a>
             </nav>
             <a class="btn btn-outline-primary" href="{{ url_for('doc') }}">Документация</a>
         </div>
