--- a/todo/templates/forma.html
+++ b/todo/templates/forma.html
@@ -3,24 +3,15 @@
 {% block content %}
 <form action="" method='post'>
     {{ form.csrf_token() }}
-    {% for field in form if field.name != "csrf_token" and field.name != "submit" %}
+    {% for field in form if field.name != "csrf_token" and field.name != "submit" %}      
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            {{ field.label() }}
+            {{ field }}
         </div>
         {% for error in field.errors%}
         <span style="color: red;">{{ error }}</span>
         {% endfor %}
     {% endfor %}
   <button type="submit" class="btn btn-primary">{{ form.submit }}</button>
-</form>
+</form> 
 {% endblock %}
