--- a/todo/templates/forma.html
+++ b/todo/templates/forma.html
@@ -1,17 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="" method='post'>
-    {{ form.csrf_token() }}
-    {% for field in form if field.name != "csrf_token" and field.name != "submit" %}      
-        <div class="form-group">
-            {{ field.label() }}
-            {{ field }}
+
+<form method="POST" action="/login">
+	<section>
+    <div class="form-box">
+        <div class="form-value">
+            <form action="mailto:DenielMorozov@yandex.com" method="POST"  class="price-form">
+                <h2>Login</h2>
+                <div class="inputbox">
+                    <input type="email" name="Email" required id="name">
+                    <label for="">Email</label>
+                </div>
+                <div class="inputbox">
+                    <input type="password" name="Password" required id="password">
+                    <label for="">Password</label>
+                </div>
+                <div class="forget">
+                    <label for=""><input type="checkbox">Запомни меня <a href="#">Забыть меня</a></label>
+                    
+                </div>
+                <button type="submit" id="price-action">Log in</button>
+                <div class="register">
+                    <p>У вас нет учетной записи для <a href="#">регистрации</a></p>
+                </div>
+            </form>
         </div>
-        {% for error in field.errors%}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
-    {% endfor %}
-  <button type="submit" class="btn btn-primary">{{ form.submit }}</button>
+    </div>
+  </section>
 </form> 
+
 {% endblock %}
