--- a/test_login/templates/author.html
+++ b/test_login/templates/author.html
@@ -10,7 +10,7 @@
       <button type="submit">Войти</button>
     </div>
     <div class="container">
-      <span class="reg"> <a href="/registration">Регистрация</a></span>
+      <span class="reg"> <a href="{{ url_for('regist') }}">Регистрация</a></span>
     </div>
 </form>  
   
