--- a/test_login/templates/ok_regist.html
+++ b/test_login/templates/ok_regist.html
@@ -3,10 +3,10 @@
 <form method="POST">
     <div class="container">
       <label><b>Вы успешно зарегистрировались</b></label>  
-    </div>  
+     
     
-     <div class="container">
-      <span class="reg"> <a href="/authorization">Вернуться к авторизации</a></span>
+    <div class="container">
+      <span class="reg"> <a href="{{ url_for('form_login') }}">Вернуться к авторизации</a></span>
     </div>
 </form>  
   
