--- a/test_login/templates/successful.html
+++ b/test_login/templates/successful.html
@@ -4,4 +4,8 @@
     <div class="container">
         <label><b>Вы успешно авторизовались</b></label>
     </div>
+
+    <div class="container">
+        <span class="reg"> <a href="{{ url_for('form_login') }}">Вернуться к авторизации</a></span>
+    </div>
 </from>
