--- a/test_login/templates/successful copy.html
+++ b/test_login/templates/successful copy.html
@@ -2,7 +2,7 @@
 
 <form method="POST">
     <div class="container">
-        <label><b>Вы успешно авторизовались</b></label>
+        <label><b>Вы успешно зарегистрировались</b></label>
     </div>
 
     <div class="container">
