--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -13,18 +13,18 @@
         <button class="ui teal basic button" type="submit">Добавить</button>
     </form>
 
-{% for todo in todo_list %}
+{% for post in todo_list %}
 <div class="ui segment">
-    <p class="ui big header">№{{ todo.id }} {{ todo.title }}</p>
+    <p class="ui big header">№{{ post['id'] }} {{ post['title'] }}</p>
 
-    {% if todo.is_complete == False %}
+    {% if post['is_complete'] == False %}
     <span class="ui gray label">Не завершено</span>
-    <a class="ui primary basic button" href="/update/{{ todo.id }}">Закрыть</a>
+    <a class="ui primary basic button" href="/update/{{ post['id'] }}">Закрыть</a>
     {% else %}
     <span class="ui green label">Завершено</span>
-    <a class="ui blue button" href="/update/{{ todo.id }}">Открыть</a>
+    <a class="ui blue button" href="/update/{{ post['id'] }}">Открыть</a>
     {% endif %}
-    <a class="ui negative basic button" href="/delete/{{ todo.id }}">Удалить</a>
+    <a class="ui negative basic button" href="/delete/{{ post['id'] }}">Удалить</a>
 </div>
 {% endfor %}
 </div>
