--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title if title else '- Базовый шаблон' }} </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
@@ -19,7 +19,7 @@
                 <a class="p-2 text-dark" href="{{ url_for('weather') }}">Погода</a>
                 <a class="p-2 text-dark" href="{{ url_for('valuta') }}">Валюта</a>
                 <a class="p-2 text-dark" href="{{ url_for('info') }}">Информация</a>
-                <a class="p-2 text-dark" href="{{ url_for('login') }}">Регистрация</a>
+                <a class="p-2 text-dark" href="{{ url_for('form_login') }}">Регистрация</a>
             </nav>
             <a class="btn btn-outline-primary" href="{{ url_for('doc') }}">Документация</a>
         </div>
